--- a/css/style.css
+++ b/css/style.css
@@ -13,17 +13,17 @@
     }
 }
 
-/*#preloader {*/
-/*    !*position : fixed;*!*/
-/*    width : 100%;*/
-/*    height : 100%;*/
-/*    background-color : #40407a;*/
-/*    display: flex;*/
-/*    justify-content: center;*/
-/*    align-items: center;*/
-/*}*/
+#preloader {
+    position : fixed;
+    width : 100%;
+    height : 100%;
+    background-color : #40407a;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 #content {
-    /*display : none;*/
+    display : none;
 }
 
 .lds-ring {
