--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,23 @@
 #content {
     display : none;
 }
+#backToTop {
+    width: 50px;
+    height: 50px;
+    z-index: 1500;
+    position: fixed;
+    right: 20px;
+    bottom: 20px;
+    background-color: #40407a;
+    border-right: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: bold;
+    color: white;
+    cursor: pointer;
+
+}
 
 .lds-ring {
     display: inline-block;
