--- a/css/style.css
+++ b/css/style.css
@@ -33,8 +33,8 @@
     right: 20px;
     bottom: 20px;
     background-color: #40407a;
-    border-right: 50%;
-    display: flex;
+    border-radius: 50%;
+    display: none;
     justify-content: center;
     align-items: center;
     font-weight: bold;
